fix: fix Icon display align in Firefox

--- a/src/components/icon/icon-styles.scss
+++ b/src/components/icon/icon-styles.scss
@@ -1,16 +1,19 @@
 :host {
   position: relative;
   box-sizing: border-box;
-  display: inline-block;
-  width: var(--md-icon-size, 1rem);
-  height: var(--md-icon-size, 1rem);
+  display: inline-flex;
+  width: var(--md-icon-size, inherit);
+  height: var(--md-icon-size, inherit);
 }
 slot {
+  width: 100%;
+  height: 100%;
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   font-size: var(--md-icon-size, inherit);
   line-height: 1;
+  display: inline;
   letter-spacing: normal;
   text-transform: none;
   white-space: nowrap;
